--- a/index.html
+++ b/index.html
@@ -95,6 +95,68 @@
         </div>
       </section>
       <!-- ===== HOME SECTION ===== -->
+
+      <!-- ===== SERVICE SECTION ===== -->
+      <section class="service section">
+        <div class="service__container container grid">
+          <div class="service__data">
+            <span class="service__subtitle section-subtitle"
+              >What we Serve</span
+            >
+            <h1 class="service__title section-title">
+              Fruit and Vegetable Delivered To Your Home
+            </h1>
+          </div>
+
+          <div class="service__group grid">
+            <div class="service__item">
+              <img
+                src="./img/services-icon-(1).png"
+                alt=""
+                class="service__item-icon"
+              />
+
+              <div class="service__item-data">
+                <h3 class="service__item-title">Free shipping</h3>
+                <p class="service__item-text">
+                  Enjoy Order in a hand using the fresness of groceries
+                </p>
+              </div>
+            </div>
+
+            <div class="service__item">
+              <img
+                src="./img/services-icon-(2).png"
+                alt=""
+                class="service__item-icon"
+              />
+
+              <div class="service__item-data">
+                <h3 class="service__item-title">15 days returns</h3>
+                <p class="service__item-text">
+                  Order in a handy way using the freshness of the groceries.
+                </p>
+              </div>
+            </div>
+
+            <div class="service__item">
+              <img
+                src="./img/services-icon-(3).png"
+                alt=""
+                class="service__item-icon"
+              />
+
+              <div class="service__item-data">
+                <h3 class="service__item-title">Secure checkout</h3>
+                <p class="service__item-text">
+                  If you get rotten items - return immediately to us.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ===== SERVICE SECTION ===== -->
     </main>
 
     <!-- ===== MAIN JS ===== -->
