--- a/index.html
+++ b/index.html
@@ -157,6 +157,58 @@
         </div>
       </section>
       <!-- ===== SERVICE SECTION ===== -->
+
+      <!-- ===== FEATURE SECTION ===== -->
+      <section class="feature section">
+        <div class="feature__container container">
+          <div class="feature__group grid">
+            <div class="feature__item grid">
+              <div class="feature__data">
+                <span class="feature__subtitle section-subtitle"
+                  >Why Choose Us</span
+                >
+                <h1 class="feature__title section-title">
+                  Find The Favorite And Discover New Ones
+                </h1>
+                <p class="feature__text">
+                  At vero eos et accusamus et iusto odio dignissimos ducimus
+                  blanditiis praesen voluptatum deleniti.
+                </p>
+                <a href="#" class="feature__button button">Explore Now</a>
+              </div>
+
+              <img
+                src="./img/features-image-(1).png"
+                alt=""
+                class="feature__img"
+              />
+            </div>
+
+            <div class="feature__item grid">
+              <div class="feature__data">
+                <span class="feature__subtitle section-subtitle"
+                  >Home Delivery</span
+                >
+                <h1 class="feature__title section-title">
+                  Sit At Home We Will Take Care Your Order
+                </h1>
+                <p class="feature__text">
+                  At vero eos et accusamus et iusto odio dignissimos ducimus
+                  blanditiis praesen voluptatum deleniti.
+                </p>
+                <a href="#" class="feature__button button">Explore Now</a>
+              </div>
+
+              <img
+                src="./img/features-image-(2).png"
+                alt=""
+                class="feature__img"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ===== FEATURE SECTION ===== -->
     </main>
 
     <!-- ===== MAIN JS ===== -->
