--- a/index.html
+++ b/index.html
@@ -209,6 +209,38 @@
         </div>
       </section>
       <!-- ===== FEATURE SECTION ===== -->
+
+      <!-- ===== CALLBACK SECTION ===== -->
+      <section class="callback section">
+        <div class="callback__container container grid">
+          <div class="callback__data">
+            <span class="callback__subtitle section-subtitle"
+              >Download our app</span
+            >
+            <h1 class="callback__title section-title">
+              Get The Groceries App Order More Easily
+            </h1>
+            <p class="callback__text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto
+              nam culpa accusamus id explicabo obcaecati porro maxime eius optio
+              assumenda.
+            </p>
+            <div class="callback__button">
+              <a href="#" class="callback__button-download button">
+                <i class="bx bxl-play-store callback__button-icon"></i>
+                App Store
+              </a>
+              <a href="#" class="callback__button-download button">
+                <i class="bx bxl-apple callback__button-icon"></i>
+                Play Store
+              </a>
+            </div>
+          </div>
+
+          <img src="./img/callback-image.png" alt="" class="callback__img" />
+        </div>
+      </section>
+      <!-- ===== CALLBACK SECTION ===== -->
     </main>
 
     <!-- ===== MAIN JS ===== -->
