--- a/index.html
+++ b/index.html
@@ -243,6 +243,85 @@
       <!-- ===== CALLBACK SECTION ===== -->
     </main>
 
+    <!-- ===== FOOTER SECTION ===== -->
+    <footer class="footer">
+      <div class="footer__container container grid">
+        <div class="footer__group grid">
+          <div class="footer__item">
+            <a href="#" class="footer__logo header__logo">
+              <img src="./img/logo.png" alt="" class="header__logo-icon" />
+              <span class="header__logo-text">Grocery</span>
+            </a>
+            <p class="footer__text">
+              Fast delivery, which is active all over the world, serves with
+              many transportation vehicles.
+            </p>
+          </div>
+
+          <div class="footer__item">
+            <h3 class="footer__item-title">Company</h3>
+
+            <ul class="footer__item-list">
+              <li class="footer__item-item">
+                <a href="#" class="footer__item-link">About Us</a>
+              </li>
+              <li class="footer__item-item">
+                <a href="#" class="footer__item-link">Blog</a>
+              </li>
+              <li class="footer__item-item">
+                <a href="#" class="footer__item-link">All Products</a>
+              </li>
+              <li class="footer__item-item">
+                <a href="#" class="footer__item-link">Locations Map</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__item">
+            <h3 class="footer__item-title">Services</h3>
+
+            <ul class="footer__item-list">
+              <li class="footer__item-item">
+                <a href="#" class="footer__item-link">Order Tracking</a>
+              </li>
+              <li class="footer__item-item">
+                <a href="#" class="footer__item-link">Wishlist</a>
+              </li>
+              <li class="footer__item-item">
+                <a href="#" class="footer__item-link">My Account</a>
+              </li>
+              <li class="footer__item-item">
+                <a href="#" class="footer__item-link">Terms & Conditions</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__item">
+            <h3 class="footer__item-title">Get in Touch</h3>
+            <p class="footer__item-text">
+              Subscribe to our weekly Newsletter and receive updates via email.
+            </p>
+          </div>
+        </div>
+
+        <div class="footer__info">
+          <p class="footer__info-copyrights">
+            All Rights Reserved - Copyrights &copy; 2021
+          </p>
+
+          <ul class="footer__info-list">
+            <li class="footer__info-item">
+              <a href="#" class="footer__info-link">Terms & Conditions</a>
+            </li>
+            <li class="footer__info-item">
+              <a href="#" class="footer__info-link">Privacy & Policy</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <!-- ===== FOOTER SECTION ===== -->
+
     <!-- ===== MAIN JS ===== -->
     <script src="./js/main.js"></script>
   </body>
